--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,11 @@
         tools:targetApi="31">
         <activity
             android:name=".ChoosePetActivity"
-            android:exported="false" />
+            android:exported="true"
+
+            >
+
+        </activity>
         <activity
             android:name=".LogInActivity"
             android:exported="false" />
